--- a/webapp/templates/task/task_edit.html
+++ b/webapp/templates/task/task_edit.html
@@ -7,7 +7,7 @@
 
 
 
-<div class="col-lg-9">
+<div class="col-sm-9">
 
     <div class="row">
         <h3>{%if request.path == url_for('task.add') %}创建新任务{%else%}编辑任务{%endif%}</h3>
