--- a/webapp/static/local.css
+++ b/webapp/static/local.css
@@ -1,28 +1,14 @@
-.navbar {
-background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #fcfcfc, #efefef) repeat scroll 0 0;
-    border-bottom: 1px solid #cccccc;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10), 0 1px 0 rgba(255, 255, 255, 0.15) inset;
-    }
-
+.navbar {background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #fcfcfc, #efefef) repeat scroll 0 0;border-bottom: 1px solid #cccccc;box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10), 0 1px 0 rgba(255, 255, 255, 0.15) inset;}
+.navbar-icon {color:#bdcadb}
 .IconGraf-iconWrapper{display:inline-block;width:28px}
 .IconGraf-icon{fill:#bdcadb}
 
+.transparent_class {
+      filter:alpha(opacity=50);
+      -moz-opacity:0.5;
+      -khtml-opacity: 0.5;
+      opacity: 0.5;
+}
+
 /* 解决滚动条占用页面宽度的问题 */
-html {
-  overflow-y: scroll;
-}
-
-:root {
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-:root body {
-  position: absolute;
-}
-
-body {
-  width: 100vw;
-  overflow: hidden;
-}
-/* 解决滚动条占用页面宽度的问题 */
+html {overflow-y: scroll;}:root {overflow-y: auto;overflow-x: hidden;}:root body {position: absolute;}body {width: 100vw;overflow: hidden; margin:60px 0 0 0;}
