--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,7 +11,7 @@
     {%block script %}{%endblock%}
 
 </head>
-<body style="margin:60px 0 0 0">
+<body>
 
 {# 导航开始 #}
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -39,11 +39,11 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="{{current_user.get_avatar()}}" width="18" height="18" class="img-rounded" /> {{current_user.username}} <b class="caret"></b>
                     </a>
-                    <ul class="dropdown-menu ">
-                        <li><a href="{{url_for('people.people',username=current_user.username)}}">我的主页</a></li>
-                        <li><a href="#">设置</a></li>
+                    <ul class="dropdown-menu">
+                        <li class="text-muted"><a href="{{url_for('people.people',username=current_user.username)}}"><span class="glyphicon glyphicon-user navbar-icon"></span> 我的主页</a></li>
+                        <li class="text-muted"><a href="#"><span class="glyphicon glyphicon-cog navbar-icon"></span> 设置</a></li>
                         <li class="divider"></li>
-                        <li><a href="{{url_for('logout')}}">退出</a></li>
+                        <li><a href="{{url_for('logout')}}" class="text-muted"><span class="glyphicon glyphicon-off navbar-icon"></span> 退出</a></li>
                     </ul>
                 </li>
             </ul>
