--- a/webapp/templates/people/people.html
+++ b/webapp/templates/people/people.html
@@ -3,7 +3,7 @@
 {% block title %}{{display_user.username}} - {{super()}}{% endblock %}
 
 {% block body %}
-<div class="col-lg-9">
+<div class="col-sm-9">
     <div class="col-sm-12">
 
     {{macros_block.show_task(current_user,tasks)}} {#展示tasks#}
