--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -75,7 +75,7 @@
 
 <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="{{url_for('static',filename='button.js')}}"></script>
+<script src="{{url_for('static',filename='main.js')}}"></script>
 
 </body>
 </html>
